--- a/rough-demo.ipynb
+++ b/rough-demo.ipynb
@@ -12,7 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,13 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(os.path.join('configs', 'anneal.yml'), 'r') as f:\n",
     "    config = yaml.safe_load(f)\n",
     "config['device'] = torch.device('cuda') if torch.cuda.is_available() else torch.device('cpu')\n",
+    "\n",
+    "config['device'] = 'mps'\n",
     "config = dict2namespace(config)"
    ]
   },
@@ -57,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,11 +81,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "runner = AnnealRunner(args, config)"
+    "extra_args = {'n_steps':20, 'lr':20, 'sampler':'rmsald', 'beta':0.99}\n",
+    "# extra_args = {'n_steps':20, 'lr':0.00002, 'sampler':'ald'}\n",
+    "extra_args = dict2namespace(extra_args)\n",
+    "runner = AnnealRunner(args, config, extra_args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "annealed RMS Langevin sampling: 100%|██████████| 10/10 [00:17<00:00,  1.78s/it]\n",
+      "saving images: 100%|██████████| 200/200 [00:00<00:00, 522.85it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "runner.test()"
    ]
   },
   {
@@ -82,7 +115,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runner.test()"
+    "!rm -rf images/mnist/*.png\n",
+    "!rm -rf images/mnist/*.pth"
    ]
   }
  ],
